<resources>
    <!-- Login page text -->
    <string name="app_name">Build-A-Computer</string>
    <string name="usernameField">Email:</string>
    <string name="passwordField">Password:</string>
    <string name="usernameHint">Enter Email</string>
    <string name="passwordHint">Enter password</string>
    <string name="loginButton">Login</string>
    <string name="signUpButton">Sign up</string>
    <string name="guestButton">Guest</string>

    <!-- Main page text -->
    <string name="mainText">Welcome, </string>
    <string name="searchPartText">Search Parts</string>
    <string name="newBuildText">New Build</string>
    <string name="viewBuildsText">View Builds</string>
    <string name="logoutText">Log Out</string>
    <string name="deleteAccountText">Delete Account</string>

    <!-- Parts -->
    <string name="caseText">Cases</string>
    <string name="moboText">Motherboards</string>
    <string name="cpuText">CPUs</string>
    <string name="gpuText">GPUs</string>
    <string name="storeText">Storage</string>
    <string name="ramText">Memory</string>
    <string name="powerText">Power Supplies</string>
    <string name="coolText">Cooling Fans</string>

    <!-- Create Build page text -->
    <string name="buildText">Build</string>
    <string name="createText">Create Build</string>

    <!-- Edit Build page text -->
    <string name="editBuildText">Edit Build</string>
    <string name="deleteBuildText">Delete Build</string>

    <!-- View Builds page text -->
    <string name="buildListText">Builds List</string>

    <!-- View Parts page text -->
    <string name="partListText">Parts List</string>

    <!-- Part Attributes -->
    <string name="partName">Part Name</string>
    <string name="partType">Part Type</string>
    <string name="partDescription">Description</string>
    <string name="partSpecs">Specifications</string>
    <string name="users">Users</string>
    <string name="parts">Parts</string>
    <string name="first_name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>

    <!-- Used in View Parts -->
    <string name="searching">Searching by: </string>
    <string name="d_text">Description: </string>
    <string name="s_text">Specifications: </string>
    <string name="heatGen">Thermal Generation: </string>
    <string name="heatCool">Thermal Cooling: </string>
    <string name="powerUse">Power Demand: </string>
    <string name="powerSupply">Power Supplied: </string>
    <string name="edit_email">Email</string>

    <string name="username_placeholder">Username:</string>
    <string name="email_placeholder">Email:</string>
    <string name="admin_button">Admin</string>

    <!-- Used in New Build -->
    <string name="create_build_title">Create Build:</string>
    <string-array name="build_requirements">
        <item>Case Needed</item>
        <item name="need_1">Motherboard Needed</item>
        <item name="need_2">CPU Needed</item>
        <item name="need_3">GPU Needed</item>
        <item name="need_4">Storage Needed</item>
        <item name="need_5">Memory Needed</item>
        <item name="need_6">Cooling Needed</item>
        <item name="need_7">Power Needed</item>
    </string-array>
    <string name="create_build">Create!</string>
    <string name="cancel_build">Cancel</string>
    <string name="build_name">Build Name:</string>
    <string name="adminSearchPartText">Admin Search Parts</string>
    <string name="editItem">Edit</string>
    <string name="name">Name:</string>
    <string name="description">Desc:</string>
    <string name="img_irl">Img IRL:</string>
    <string name="misc">Misc:</string>
    <string name="edit_item">Edit Item</string>
    <string name="misc2">Misc2:</string>

</resources>