<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PartsRecyclerActivity">

    <TextView
        android:id="@+id/searchTitle3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_build_title"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/part_list"
        android:layout_width="398dp"
        android:layout_height="551dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createBuildButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginBottom="16dp"
        android:text="@string/create_build"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/part_list"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cancelBuildButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:text="@string/cancel_build"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/part_list"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/buildName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/build_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/searchTitle3"
        app:layout_constraintStart_toEndOf="@+id/searchTitle3"
        app:layout_constraintTop_toTopOf="@+id/searchTitle3" />
</androidx.constraintlayout.widget.ConstraintLayout>