<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminViewPart">

    <TextView
        android:id="@+id/adminEditItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_item"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <EditText
        android:id="@+id/Part_Name"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:gravity="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.617"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138" />

    <EditText
        android:id="@+id/Part_Description"
        android:layout_width="270dp"
        android:layout_height="80dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="36dp"
        android:gravity="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.742"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Part_Name" />

    <ImageView
        android:id="@+id/Part_Picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Part_Description"
        app:layout_constraintVertical_bias="0.107"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/Part_URL"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Part_Picture"
        app:layout_constraintVertical_bias="0.116" />

    <EditText
        android:id="@+id/Part_Etc"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Part_URL"
        app:layout_constraintVertical_bias="0.149" />

    <EditText
        android:id="@+id/Part_Etc2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Part_Etc"
        app:layout_constraintVertical_bias="0.149" />

    <Button
        android:id="@+id/editItembutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Part_Etc2" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/Part_Name"
        app:layout_constraintEnd_toStartOf="@+id/Part_Name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Part_Name" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        app:layout_constraintBottom_toBottomOf="@+id/Part_Description"
        app:layout_constraintEnd_toStartOf="@+id/Part_Description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Part_Description" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/img_irl"
        app:layout_constraintBottom_toBottomOf="@+id/Part_URL"
        app:layout_constraintEnd_toStartOf="@+id/Part_URL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Part_URL" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/misc"
        app:layout_constraintBottom_toBottomOf="@+id/Part_Etc"
        app:layout_constraintEnd_toStartOf="@+id/Part_Etc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Part_Etc" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/misc2"
        app:layout_constraintBottom_toBottomOf="@+id/Part_Etc2"
        app:layout_constraintEnd_toStartOf="@+id/Part_Etc2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Part_Etc2" />

</androidx.constraintlayout.widget.ConstraintLayout>